Bug 631953 - Check codec is initialized before using cached serial number.  r=cpearce a=roc